// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpotlightHero component renders correctly 1`] = `
<div>
  <div
    class="SpotlightHero-root-1"
    data-testid="spotLightHero"
  >
    <div
      class="SpotlightHero-header-13"
    >
      <div
        class="Container-root-17"
      >
        <div
          class="MuiContainer-root SpotlightHero-headerContainer-14 MuiContainer-maxWidthXl"
        >
          <div
            class="SpotlightHero-breadcrumbs-16"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-19 Breadcrumbs-darkThemed-26 MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-27 MuiButton-text Button-text-28 Button-textDarkBg-32 Breadcrumbs-button-21 Breadcrumbs-link-22 MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-30"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-31 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root Breadcrumbs-icon-23"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="Breadcrumbs-label-24"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root SpotlightHero-title-15 Typography-root-47 Typography-underline-49 Typography-darkBg-50 MuiTypography-h1"
            data-testid="typography"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container-root-17"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="SpotlightHero-content-10"
        >
          <div
            class="SpotlightHero-text-11"
          >
            <p
              class="MuiTypography-root Typography-root-47 MuiTypography-body1"
              data-testid="typography"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SpotlightHero-overlay-5 SpotlightHero-blue-7"
    >
      <img
        alt="Lorem ipsum"
        class="SpotlightHero-image-3 Media-root-55"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;

exports[`SpotlightHero component renders correctly if title as React node 1`] = `
<div>
  <div
    class="SpotlightHero-root-225"
    data-testid="spotLightHero"
  >
    <div
      class="SpotlightHero-header-237"
    >
      <div
        class="Container-root-241"
      >
        <div
          class="MuiContainer-root SpotlightHero-headerContainer-238 MuiContainer-maxWidthXl"
        >
          <h1
            class="MuiTypography-root SpotlightHero-title-239 Typography-root-243 Typography-underline-245 Typography-darkBg-246 MuiTypography-h1"
            data-testid="typography"
          >
            <span
              class="test-title"
            >
              Title
            </span>
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container-root-241"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="SpotlightHero-content-234"
        >
          <div
            class="SpotlightHero-text-235"
          >
            <p
              class="MuiTypography-root Typography-root-243 MuiTypography-body1"
              data-testid="typography"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SpotlightHero-overlay-229 SpotlightHero-blue-231"
    />
  </div>
</div>
`;

exports[`SpotlightHero component renders if media !== 'img' 1`] = `
<div>
  <div
    class="SpotlightHero-root-169"
    data-testid="spotLightHero"
  >
    <div
      class="SpotlightHero-header-181"
    >
      <div
        class="Container-root-185"
      >
        <div
          class="MuiContainer-root SpotlightHero-headerContainer-182 MuiContainer-maxWidthXl"
        >
          <div
            class="SpotlightHero-breadcrumbs-184"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-187 Breadcrumbs-darkThemed-194 MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-195 MuiButton-text Button-text-196 Button-textDarkBg-200 Breadcrumbs-button-189 Breadcrumbs-link-190 MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-198"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-199 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root Breadcrumbs-icon-191"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="Breadcrumbs-label-192"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root SpotlightHero-title-183 Typography-root-215 Typography-underline-217 Typography-darkBg-218 MuiTypography-h1"
            data-testid="typography"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container-root-185"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="SpotlightHero-content-178"
        >
          <div
            class="SpotlightHero-text-179"
          >
            <p
              class="MuiTypography-root Typography-root-215 MuiTypography-body1"
              data-testid="typography"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-195 MuiButton-outlined Button-outlinedDarkBg-201 SpotlightHero-cta-180 MuiButton-outlinedPrimary"
            label="CTA action"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-198"
            >
              CTA action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="SpotlightHero-overlay-173 SpotlightHero-blue-175"
    >
      <div
        class="SpotlightHero-image-171 Media-root-223"
        layout="in-place"
      >
        <img
          alt="Lorem ipsum"
          src="path-to-image"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SpotlightHero component renders with cta 1`] = `
<div>
  <div
    class="SpotlightHero-root-57"
    data-testid="spotLightHero"
  >
    <div
      class="SpotlightHero-header-69"
    >
      <div
        class="Container-root-73"
      >
        <div
          class="MuiContainer-root SpotlightHero-headerContainer-70 MuiContainer-maxWidthXl"
        >
          <div
            class="SpotlightHero-breadcrumbs-72"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-75 Breadcrumbs-darkThemed-82 MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-83 MuiButton-text Button-text-84 Button-textDarkBg-88 Breadcrumbs-button-77 Breadcrumbs-link-78 MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-86"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-87 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root Breadcrumbs-icon-79"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="Breadcrumbs-label-80"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root SpotlightHero-title-71 Typography-root-103 Typography-underline-105 Typography-darkBg-106 MuiTypography-h1"
            data-testid="typography"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container-root-73"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="SpotlightHero-content-66"
        >
          <div
            class="SpotlightHero-text-67"
          >
            <p
              class="MuiTypography-root Typography-root-103 MuiTypography-body1"
              data-testid="typography"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
          <button
            class="MuiButtonBase-root MuiButton-root Button-root-83 MuiButton-outlined Button-outlinedDarkBg-89 SpotlightHero-cta-68 MuiButton-outlinedPrimary"
            label="CTA action"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label Button-label-86"
            >
              CTA action
            </span>
            <span
              class="MuiTouchRipple-root"
            />
          </button>
        </div>
      </div>
    </div>
    <div
      class="SpotlightHero-overlay-61 SpotlightHero-blue-63"
    >
      <img
        alt="Lorem ipsum"
        class="SpotlightHero-image-59 Media-root-111"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;

exports[`SpotlightHero component renders with keyline 1`] = `
<div>
  <div
    class="SpotlightHero-root-113 SpotlightHero-keyline-114"
    data-testid="spotLightHero"
  >
    <div
      class="SpotlightHero-header-125"
    >
      <div
        class="Container-root-129"
      >
        <div
          class="MuiContainer-root SpotlightHero-headerContainer-126 MuiContainer-maxWidthXl"
        >
          <div
            class="SpotlightHero-breadcrumbs-128"
          >
            <nav
              aria-label="breadcrumbs"
              class="MuiTypography-root MuiBreadcrumbs-root Breadcrumbs-root-131 Breadcrumbs-darkThemed-138 MuiTypography-body1 MuiTypography-colorTextSecondary"
            >
              <ol
                class="MuiBreadcrumbs-ol"
              >
                <li
                  class="MuiBreadcrumbs-li"
                >
                  <a
                    aria-disabled="false"
                    class="MuiButtonBase-root MuiButton-root Button-root-139 MuiButton-text Button-text-140 Button-textDarkBg-144 Breadcrumbs-button-133 Breadcrumbs-link-134 MuiButton-textPrimary"
                    href="/"
                    tabindex="0"
                  >
                    <span
                      class="MuiButton-label Button-label-142"
                    >
                      <span
                        class="MuiButton-startIcon Button-startIcon-143 MuiButton-iconSizeMedium"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root Breadcrumbs-icon-135"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"
                          />
                        </svg>
                      </span>
                      <span
                        class="Breadcrumbs-label-136"
                      >
                        Tiles
                      </span>
                    </span>
                    <span
                      class="MuiTouchRipple-root"
                    />
                  </a>
                </li>
              </ol>
            </nav>
          </div>
          <h1
            class="MuiTypography-root SpotlightHero-title-127 Typography-root-159 Typography-underline-161 Typography-darkBg-162 MuiTypography-h1"
            data-testid="typography"
          >
            H1 Heading desktop
          </h1>
        </div>
      </div>
    </div>
    <div
      class="Container-root-129"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <div
          class="SpotlightHero-content-122"
        >
          <div
            class="SpotlightHero-text-123"
          >
            <p
              class="MuiTypography-root Typography-root-159 MuiTypography-body1"
              data-testid="typography"
            >
              Duis incididunt non laborum nulla consectetur irure ipsum. Laboris eu quis ex nostrud sunt ad eu laboris commodo deserunt commodo. Exercitation ullamco ipsum duis reprehenderit labore officia incididunt amet aliquip quis.
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="SpotlightHero-overlay-117 SpotlightHero-blue-119"
    >
      <img
        alt="Lorem ipsum"
        class="SpotlightHero-image-115 Media-root-167"
        src="path-to-image"
      />
    </div>
  </div>
</div>
`;
